# cargo-smart-contract

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
program/: Cargo.toml
program/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
program/src/tests/: functional.rs
