[package]
name = "insurance-cli"
version = "0.1.0"
description = "Insurance Contract CLI Client"
edition = "2018"
publish = false

[dependencies]
solana-client = "1.6.9"
solana-account-decoder = "1.6.9"
solana-program = "1.6.9"
solana-sdk = "1.6.9"
bincode = "1.3.2"
borsh = "0.9.1"
clap = "2.33.3"
solana-clap-utils = "1.6.9"
solana-cli-config = "1.6.9"
insurance-contract = { path = "../program", features = [ "no-entrypoint" ] }

[[bin]]
name = "insurance-cli"
path = "src/main.rs"
